// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StationList renders a list highlighting a single selected fuel type 1`] = `
<div
  class="mb-3"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="space-y-8"
    data-testid="station-list"
  >
    <div
      class="station border border-slate-400 rounded-bl-3xl shadow-1md"
      data-testid="information-callout"
    >
      <div
        class="px-6 pt-6 pb-8 outline-none scroll-mt-6"
        data-testid="station-card"
        id="station-station-001"
        tabindex="-1"
      >
        <div
          class="flex flex-col lg:flex-row lg:items-baseline lg:justify-between"
        >
          <div>
            <h2
              class="text-xl md:text-2xl text-gray-800 font-bold !mb-0"
            >
              Shell London Bridge
            </h2>
            <p
              class="mt-1 text-lg text-gray-800"
            >
              Shell
            </p>
          </div>
          <h3
            class="text-xl md:text-2xl text-gray-800 font-bold mt-2 lg:mt-0 lg:shrink-0"
            data-testid="station-price"
          >
            132.9p
          </h3>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <p
          class="text-lg font-bold text-gray-800"
          data-testid="station-distance"
        >
          {d} miles away
        </p>
        <p
          class="text-lg text-gray-800"
        >
          123 Test Street
          , 
          SW1A 1AA
        </p>
        <div
          class="mt-3"
        >
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="https://www.google.com/maps/dir/?api=1&destination=51.5074,-0.1278"
            rel="noopener noreferrer"
            target="_blank"
          >
            View on Google Maps (opens in new tab)
          </a>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <details
          class="group tool-expand"
          data-testid="expandable-section"
        >
          <summary
            class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
          >
            <svgr-mock
              class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
            />
            <div
              class="hidden group-open:block"
            >
              Hide details
            </div>
            <div
              class="block group-open:hidden"
              data-testid="summary-block-title"
            >
              Show details
            </div>
          </summary>
          <div
            class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
          >
            <div
              class="pt-4 space-y-6"
            >
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Fuel prices
                </h5>
                <table
                  class="w-full text-sm"
                  data-testid="fuel-prices-table"
                >
                  <thead>
                    <tr
                      class="border-b border-slate-400"
                    >
                      <th
                        class="py-1 font-normal text-left text-gray-700"
                      >
                        Fuel type
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Price (pence/litre)
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Last updated
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Unleaded (E10)
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        132.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Super unleaded (E5)
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        140.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Diesel
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        138.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Opening hours
                </h5>
                <div
                  class="space-y-1"
                  data-testid="opening-hours"
                >
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Monday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Tuesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm font-semibold"
                  >
                    <span>
                      Wednesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Thursday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Friday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Saturday
                    </span>
                    <span>
                      07:00 – 21:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Sunday
                    </span>
                    <span>
                      08:00 – 20:00
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Services
                </h5>
                <div
                  class="flex flex-wrap gap-2"
                  data-testid="amenities-badges"
                >
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Car Wash
                  </span>
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Toilets
                  </span>
                </div>
              </div>
            </div>
          </div>
        </details>
      </div>
    </div>
    <div
      class="station border border-slate-400 rounded-bl-3xl shadow-1md"
      data-testid="information-callout"
    >
      <div
        class="px-6 pt-6 pb-8 outline-none scroll-mt-6"
        data-testid="station-card"
        id="station-station-002"
        tabindex="-1"
      >
        <div
          class="flex flex-col lg:flex-row lg:items-baseline lg:justify-between"
        >
          <div>
            <h2
              class="text-xl md:text-2xl text-gray-800 font-bold !mb-0"
            >
              BP Waterloo
            </h2>
            <p
              class="mt-1 text-lg text-gray-800"
            >
              BP
            </p>
          </div>
          <h3
            class="text-xl md:text-2xl text-gray-800 font-bold mt-2 lg:mt-0 lg:shrink-0"
            data-testid="station-price"
          >
            132.9p
          </h3>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <p
          class="text-lg font-bold text-gray-800"
          data-testid="station-distance"
        >
          {d} miles away
        </p>
        <p
          class="text-lg text-gray-800"
        >
          123 Test Street
          , 
          SW1A 1AA
        </p>
        <div
          class="mt-3"
        >
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="https://www.google.com/maps/dir/?api=1&destination=51.5074,-0.1278"
            rel="noopener noreferrer"
            target="_blank"
          >
            View on Google Maps (opens in new tab)
          </a>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <details
          class="group tool-expand"
          data-testid="expandable-section"
        >
          <summary
            class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
          >
            <svgr-mock
              class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
            />
            <div
              class="hidden group-open:block"
            >
              Hide details
            </div>
            <div
              class="block group-open:hidden"
              data-testid="summary-block-title"
            >
              Show details
            </div>
          </summary>
          <div
            class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
          >
            <div
              class="pt-4 space-y-6"
            >
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Fuel prices
                </h5>
                <table
                  class="w-full text-sm"
                  data-testid="fuel-prices-table"
                >
                  <thead>
                    <tr
                      class="border-b border-slate-400"
                    >
                      <th
                        class="py-1 font-normal text-left text-gray-700"
                      >
                        Fuel type
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Price (pence/litre)
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Last updated
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Unleaded (E10)
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        132.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Super unleaded (E5)
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        140.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Diesel
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        138.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Opening hours
                </h5>
                <div
                  class="space-y-1"
                  data-testid="opening-hours"
                >
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Monday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Tuesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm font-semibold"
                  >
                    <span>
                      Wednesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Thursday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Friday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Saturday
                    </span>
                    <span>
                      07:00 – 21:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Sunday
                    </span>
                    <span>
                      08:00 – 20:00
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Services
                </h5>
                <div
                  class="flex flex-wrap gap-2"
                  data-testid="amenities-badges"
                >
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Car Wash
                  </span>
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Toilets
                  </span>
                </div>
              </div>
            </div>
          </div>
        </details>
      </div>
    </div>
    <div
      class="station border border-slate-400 rounded-bl-3xl shadow-1md"
      data-testid="information-callout"
    >
      <div
        class="px-6 pt-6 pb-8 outline-none scroll-mt-6"
        data-testid="station-card"
        id="station-station-003"
        tabindex="-1"
      >
        <div
          class="flex flex-col lg:flex-row lg:items-baseline lg:justify-between"
        >
          <div>
            <h2
              class="text-xl md:text-2xl text-gray-800 font-bold !mb-0"
            >
              Tesco Extra Bermondsey
            </h2>
            <p
              class="mt-1 text-lg text-gray-800"
            >
              Tesco
            </p>
          </div>
          <h3
            class="text-xl md:text-2xl text-gray-800 font-bold mt-2 lg:mt-0 lg:shrink-0"
            data-testid="station-price"
          >
            129.9p
          </h3>
        </div>
        <div
          class="flex flex-wrap gap-2 mt-4"
        >
          <span
            class="border border-slate-400 rounded shadow-bottom-gray px-4 py-1 text-xs text-gray-800"
          >
            Supermarket
          </span>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <p
          class="text-lg font-bold text-gray-800"
          data-testid="station-distance"
        >
          {d} miles away
        </p>
        <p
          class="text-lg text-gray-800"
        >
          123 Test Street
          , 
          SW1A 1AA
        </p>
        <div
          class="mt-3"
        >
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="https://www.google.com/maps/dir/?api=1&destination=51.5074,-0.1278"
            rel="noopener noreferrer"
            target="_blank"
          >
            View on Google Maps (opens in new tab)
          </a>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <details
          class="group tool-expand"
          data-testid="expandable-section"
        >
          <summary
            class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
          >
            <svgr-mock
              class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
            />
            <div
              class="hidden group-open:block"
            >
              Hide details
            </div>
            <div
              class="block group-open:hidden"
              data-testid="summary-block-title"
            >
              Show details
            </div>
          </summary>
          <div
            class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
          >
            <div
              class="pt-4 space-y-6"
            >
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Fuel prices
                </h5>
                <table
                  class="w-full text-sm"
                  data-testid="fuel-prices-table"
                >
                  <thead>
                    <tr
                      class="border-b border-slate-400"
                    >
                      <th
                        class="py-1 font-normal text-left text-gray-700"
                      >
                        Fuel type
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Price (pence/litre)
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Last updated
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Unleaded (E10)
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        129.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Diesel
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        134.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Opening hours
                </h5>
                <div
                  class="space-y-1"
                  data-testid="opening-hours"
                >
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Monday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Tuesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm font-semibold"
                  >
                    <span>
                      Wednesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Thursday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Friday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Saturday
                    </span>
                    <span>
                      07:00 – 21:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Sunday
                    </span>
                    <span>
                      08:00 – 20:00
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Services
                </h5>
                <div
                  class="flex flex-wrap gap-2"
                  data-testid="amenities-badges"
                >
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Car Wash
                  </span>
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Toilets
                  </span>
                </div>
              </div>
            </div>
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`StationList renders a list of StationCards when stations are returned 1`] = `
<div
  class="mb-3"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="space-y-8"
    data-testid="station-list"
  >
    <div
      class="station border border-slate-400 rounded-bl-3xl shadow-1md"
      data-testid="information-callout"
    >
      <div
        class="px-6 pt-6 pb-8 outline-none scroll-mt-6"
        data-testid="station-card"
        id="station-station-001"
        tabindex="-1"
      >
        <div
          class="flex flex-col lg:flex-row lg:items-baseline lg:justify-between"
        >
          <div>
            <h2
              class="text-xl md:text-2xl text-gray-800 font-bold !mb-0"
            >
              Shell London Bridge
            </h2>
            <p
              class="mt-1 text-lg text-gray-800"
            >
              Shell
            </p>
          </div>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <p
          class="text-lg font-bold text-gray-800"
          data-testid="station-distance"
        >
          {d} miles away
        </p>
        <p
          class="text-lg text-gray-800"
        >
          123 Test Street
          , 
          SW1A 1AA
        </p>
        <div
          class="mt-3"
        >
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="https://www.google.com/maps/dir/?api=1&destination=51.5074,-0.1278"
            rel="noopener noreferrer"
            target="_blank"
          >
            View on Google Maps (opens in new tab)
          </a>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <details
          class="group tool-expand"
          data-testid="expandable-section"
        >
          <summary
            class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
          >
            <svgr-mock
              class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
            />
            <div
              class="hidden group-open:block"
            >
              Hide details
            </div>
            <div
              class="block group-open:hidden"
              data-testid="summary-block-title"
            >
              Show details
            </div>
          </summary>
          <div
            class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
          >
            <div
              class="pt-4 space-y-6"
            >
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Fuel prices
                </h5>
                <table
                  class="w-full text-sm"
                  data-testid="fuel-prices-table"
                >
                  <thead>
                    <tr
                      class="border-b border-slate-400"
                    >
                      <th
                        class="py-1 font-normal text-left text-gray-700"
                      >
                        Fuel type
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Price (pence/litre)
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Last updated
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Unleaded (E10)
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        132.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Super unleaded (E5)
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        140.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Diesel
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        138.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Opening hours
                </h5>
                <div
                  class="space-y-1"
                  data-testid="opening-hours"
                >
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Monday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Tuesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm font-semibold"
                  >
                    <span>
                      Wednesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Thursday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Friday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Saturday
                    </span>
                    <span>
                      07:00 – 21:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Sunday
                    </span>
                    <span>
                      08:00 – 20:00
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Services
                </h5>
                <div
                  class="flex flex-wrap gap-2"
                  data-testid="amenities-badges"
                >
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Car Wash
                  </span>
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Toilets
                  </span>
                </div>
              </div>
            </div>
          </div>
        </details>
      </div>
    </div>
    <div
      class="station border border-slate-400 rounded-bl-3xl shadow-1md"
      data-testid="information-callout"
    >
      <div
        class="px-6 pt-6 pb-8 outline-none scroll-mt-6"
        data-testid="station-card"
        id="station-station-002"
        tabindex="-1"
      >
        <div
          class="flex flex-col lg:flex-row lg:items-baseline lg:justify-between"
        >
          <div>
            <h2
              class="text-xl md:text-2xl text-gray-800 font-bold !mb-0"
            >
              BP Waterloo
            </h2>
            <p
              class="mt-1 text-lg text-gray-800"
            >
              BP
            </p>
          </div>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <p
          class="text-lg font-bold text-gray-800"
          data-testid="station-distance"
        >
          {d} miles away
        </p>
        <p
          class="text-lg text-gray-800"
        >
          123 Test Street
          , 
          SW1A 1AA
        </p>
        <div
          class="mt-3"
        >
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="https://www.google.com/maps/dir/?api=1&destination=51.5074,-0.1278"
            rel="noopener noreferrer"
            target="_blank"
          >
            View on Google Maps (opens in new tab)
          </a>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <details
          class="group tool-expand"
          data-testid="expandable-section"
        >
          <summary
            class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
          >
            <svgr-mock
              class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
            />
            <div
              class="hidden group-open:block"
            >
              Hide details
            </div>
            <div
              class="block group-open:hidden"
              data-testid="summary-block-title"
            >
              Show details
            </div>
          </summary>
          <div
            class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
          >
            <div
              class="pt-4 space-y-6"
            >
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Fuel prices
                </h5>
                <table
                  class="w-full text-sm"
                  data-testid="fuel-prices-table"
                >
                  <thead>
                    <tr
                      class="border-b border-slate-400"
                    >
                      <th
                        class="py-1 font-normal text-left text-gray-700"
                      >
                        Fuel type
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Price (pence/litre)
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Last updated
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Unleaded (E10)
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        132.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Super unleaded (E5)
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        140.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Diesel
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        138.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Opening hours
                </h5>
                <div
                  class="space-y-1"
                  data-testid="opening-hours"
                >
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Monday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Tuesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm font-semibold"
                  >
                    <span>
                      Wednesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Thursday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Friday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Saturday
                    </span>
                    <span>
                      07:00 – 21:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Sunday
                    </span>
                    <span>
                      08:00 – 20:00
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Services
                </h5>
                <div
                  class="flex flex-wrap gap-2"
                  data-testid="amenities-badges"
                >
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Car Wash
                  </span>
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Toilets
                  </span>
                </div>
              </div>
            </div>
          </div>
        </details>
      </div>
    </div>
    <div
      class="station border border-slate-400 rounded-bl-3xl shadow-1md"
      data-testid="information-callout"
    >
      <div
        class="px-6 pt-6 pb-8 outline-none scroll-mt-6"
        data-testid="station-card"
        id="station-station-003"
        tabindex="-1"
      >
        <div
          class="flex flex-col lg:flex-row lg:items-baseline lg:justify-between"
        >
          <div>
            <h2
              class="text-xl md:text-2xl text-gray-800 font-bold !mb-0"
            >
              Tesco Extra Bermondsey
            </h2>
            <p
              class="mt-1 text-lg text-gray-800"
            >
              Tesco
            </p>
          </div>
        </div>
        <div
          class="flex flex-wrap gap-2 mt-4"
        >
          <span
            class="border border-slate-400 rounded shadow-bottom-gray px-4 py-1 text-xs text-gray-800"
          >
            Supermarket
          </span>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <p
          class="text-lg font-bold text-gray-800"
          data-testid="station-distance"
        >
          {d} miles away
        </p>
        <p
          class="text-lg text-gray-800"
        >
          123 Test Street
          , 
          SW1A 1AA
        </p>
        <div
          class="mt-3"
        >
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="https://www.google.com/maps/dir/?api=1&destination=51.5074,-0.1278"
            rel="noopener noreferrer"
            target="_blank"
          >
            View on Google Maps (opens in new tab)
          </a>
        </div>
        <hr
          class="my-4 border-slate-400"
        />
        <details
          class="group tool-expand"
          data-testid="expandable-section"
        >
          <summary
            class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
          >
            <svgr-mock
              class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
            />
            <div
              class="hidden group-open:block"
            >
              Hide details
            </div>
            <div
              class="block group-open:hidden"
              data-testid="summary-block-title"
            >
              Show details
            </div>
          </summary>
          <div
            class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
          >
            <div
              class="pt-4 space-y-6"
            >
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Fuel prices
                </h5>
                <table
                  class="w-full text-sm"
                  data-testid="fuel-prices-table"
                >
                  <thead>
                    <tr
                      class="border-b border-slate-400"
                    >
                      <th
                        class="py-1 font-normal text-left text-gray-700"
                      >
                        Fuel type
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Price (pence/litre)
                      </th>
                      <th
                        class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
                      >
                        Last updated
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Unleaded (E10)
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        129.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                    <tr
                      class="border-b border-slate-200"
                    >
                      <td
                        class="py-1"
                      >
                        Diesel
                      </td>
                      <td
                        class="py-1 pl-2 font-medium text-right sm:pl-4"
                      >
                        134.9p
                      </td>
                      <td
                        class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
                      >
                        15/01/2025
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Opening hours
                </h5>
                <div
                  class="space-y-1"
                  data-testid="opening-hours"
                >
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Monday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Tuesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm font-semibold"
                  >
                    <span>
                      Wednesday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Thursday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Friday
                    </span>
                    <span>
                      06:00 – 22:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Saturday
                    </span>
                    <span>
                      07:00 – 21:00
                    </span>
                  </div>
                  <div
                    class="flex justify-between text-sm "
                  >
                    <span>
                      Sunday
                    </span>
                    <span>
                      08:00 – 20:00
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <h5
                  class="mb-2 font-bold text-gray-800"
                >
                  Services
                </h5>
                <div
                  class="flex flex-wrap gap-2"
                  data-testid="amenities-badges"
                >
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Car Wash
                  </span>
                  <span
                    class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
                  >
                    Toilets
                  </span>
                </div>
              </div>
            </div>
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`StationList renders an empty list when no stations 1`] = `
<div
  class="mb-3"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="space-y-8"
    data-testid="station-list"
  />
</div>
`;
